// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|buttons//input/button default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button"
      type="button"
      value="button default"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/button primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--primary"
      type="button"
      value="button primary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/button secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--secondary"
      type="button"
      value="button secondary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/submit default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button"
      type="submit"
      value="button default"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/submit primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--primary"
      type="submit"
      value="button primary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/submit secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--secondary"
      type="submit"
      value="button secondary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/anchor default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="button"
    >
      anchor button default
    </a>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/anchor primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="button button--primary"
    >
      anchor button primary
    </a>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/anchor secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="button button--secondary"
    >
      anchor button secondary
    </a>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/button default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <button
      class="button"
    >
      button default
    </button>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/button primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <button
      class="button button--primary"
    >
      button primary
    </button>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/button secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <button
      class="button button--secondary"
    >
      button secondary
    </button>
  </section>
</section>
`;

<<<<<<< HEAD
exports[`Storyshots Atoms|text/headings h1 1`] = `
=======
exports[`Storyshots Molecules/product default 1`] = `
>>>>>>> feat(hero-product): add hero-product
<section
  class="story"
>
  <section
    class="story"
  >
<<<<<<< HEAD
    <h1>
      A Page Title
    </h1>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h2 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h2>
      A Title for an Organism
    </h2>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h3 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h3>
      A Title for a Molecule within an organism
    </h3>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h4 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h4>
      A title within a paragraph of normal copy
    </h4>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h5 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h5>
      A title within a paragraph of small copy (e.g. image captions)
    </h5>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h6 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h6>
      A title with the smallest appearance on the deepest level (e.g. legal in footer)
    </h6>
=======
    <div
      class="product"
    >
      <div
        class="product__icon-container"
      >
        <!---->
      </div>
       
      <div
        class="product__information"
      >
        <p
          class="product__name"
        >
          
            Pla, 750 gr
        
        </p>
         
        <p
          class="product__pricing"
        >
          
            Price on request
        
        </p>
      </div>
    </div>
>>>>>>> feat(hero-product): add hero-product
  </section>
</section>
`;

<<<<<<< HEAD
exports[`Storyshots Molecules|auto-complete default 1`] = `
=======
exports[`Storyshots Molecules/product printer 1`] = `
>>>>>>> feat(hero-product): add hero-product
<section
  class="story"
>
  <section
    class="story"
  >
    <div
<<<<<<< HEAD
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="autocomplete-story__dropdown"
      class="auto-complete"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="autocomplete-story__dropdown"
        autocomplete="off"
        autofocus="autofocus"
        class="auto-complete__input"
        id="autocomplete-story"
        type="text"
      />
       
      <div
        class="auto-complete__dropdown"
        id="autocomplete-story__dropdown"
        role="listbox"
      >
        <h4
          class="auto-complete__label"
          id="storedLabel"
        >
          
                Last used
            
        </h4>
         
        <ul
          aria-labelledby="storedLabel"
          class="auto-complete__list"
        >
          <li
            class="auto-complete__list-item"
            role="option"
            tabindex="0"
          >
            
                    Stored item 1
                
          </li>
          <li
            class="auto-complete__list-item"
            role="option"
            tabindex="0"
          >
            
                    Stored item 2: Type it.. in input to see other items
                
          </li>
        </ul>
         
        <!---->
=======
      class="product"
    >
      <div
        class="product__icon-container"
      >
        <!---->
      </div>
       
      <div
        class="product__information"
      >
        <p
          class="product__name"
        >
          
            Ultimaker S5
        
        </p>
         
        <p
          class="product__pricing"
        >
          
            Price on request
        
        </p>
>>>>>>> feat(hero-product): add hero-product
      </div>
    </div>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/content-toggle default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="toggle toggle--icon"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span>
        More
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button default"
      class="icon-button"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button default
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button defaultNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button default, no slot"
      class="icon-button"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button large 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button large"
      class="icon-button icon-button--large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button large
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button largeNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button large, no slot"
      class="icon-button icon-button--large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button small 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button small"
      class="icon-button icon-button--small"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button small
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button smallNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button small, no slot"
      class="icon-button icon-button--small"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button underline 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button underline-large"
      class="icon-button icon-button--underline-large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button underline
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button underlineNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button underline-large, no slot"
      class="icon-button icon-button--underline-large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Organisms/hero-product default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <article
      class="hero hero--product"
    >
      <section
        class="container hero__container"
      >
        <div
          class="flexgrid flexgrid--gutter flexgrid--column-reversed flexgrid--mobile-xl-row"
        >
          <div
            class="flexgrid__cell--xs-6"
          >
            <div
              class="hero__description"
            >
              <h1>
                Lorem ipsum dolor sit amet
              </h1>
               
              <h2
                class="hero__subtitle"
              >
                Maecenas faucibus mollis interdum nulla vitae elit libero a pharetra augue
              </h2>
               
              <p
                class="copy--intro"
              >
                Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
              </p>
               
              <div
                class="hero__products"
              >
                <div
                  class="product hero__products-item hero__products-item--multiple"
                  type="Product"
                >
                  <div
                    class="product__icon-container"
                  >
                    <!---->
                  </div>
                   
                  <div
                    class="product__information"
                  >
                    <p
                      class="product__name"
                    >
                      
            Pla, 750 gr
        
                    </p>
                     
                    <p
                      class="product__pricing"
                    >
                      
            Price on request
        
                    </p>
                  </div>
                </div>
                <div
                  class="product hero__products-item hero__products-item--multiple"
                  type="Product"
                >
                  <div
                    class="product__icon-container"
                  >
                    <!---->
                  </div>
                   
                  <div
                    class="product__information"
                  >
                    <p
                      class="product__name"
                    >
                      
            Ultimaker S5
        
                    </p>
                     
                    <p
                      class="product__pricing"
                    >
                      
            Price on request
        
                    </p>
                  </div>
                </div>
              </div>
               
              <div
                class="cta__block cta__block--hero"
              >
                <a
                  class="link--primary button button--primary cta__link"
                  href="#/en/quote"
                >
                  <!---->
                   
                  <span
                    class="link__underline"
                  >
                    
        Request a quote
    
                  </span>
                </a>
                <a
                  class="link--large link cta__link"
                  href="#/en/link"
                >
                  <!---->
                   
                  <span
                    class="link__underline"
                  >
                    
        Content link
    
                  </span>
                </a>
              </div>
               
              <ul
                class="hero__linklist"
              >
                <li
                  class="hero__linklist-item"
                >
                  <a
                    class="link hero__linklist-link link--icon"
                    href="#/en/link"
                  >
                    <!---->
                     
                    <span
                      class="link__underline"
                    >
                      
        Content link
    
                    </span>
                  </a>
                </li>
                <li
                  class="hero__linklist-item"
                >
                  <a
                    class="link hero__linklist-link link--icon"
                    href="#/en/link"
                  >
                    <!---->
                     
                    <span
                      class="link__underline"
                    >
                      
        Content link
    
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
           
          <div
            class="flexgrid__cell--xs-6"
          >
            <div
              class="hero__image--product"
            >
              <img
                alt="An example image"
                class="img--contain img--loading"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                type="Image"
              />
            </div>
          </div>
        </div>
      </section>
    </article>
  </section>
</section>
`;
